--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.10",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
