--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.4.11",
     "slugify": "^1.4.5"
   },
   "devDependencies": {
