--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DevCamper backend api",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server",
+    "start": "node server",
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
